samples/_failures_safe/1761643204_8322ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30f15b27.c: In function ‘main’:
./samples/SAFE/__tmp_30f15b27.c:150:9: error: expected declaration or statement at end of input
  150 |         choice = read_int("", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_30f15b27.c:150:9: error: expected declaration or statement at end of input
